LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST ${MODULE_SRC} ORYZA.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(RiceGrow SHARED ${SRC_LIST})
IF (WIN32)
    TARGET_LINK_LIBRARIES(RiceGrow module_setting bmps data util)
    IF (MSVC)
        SET_PROPERTY(TARGET RiceGrow PROPERTY FOLDER "modules/ecology")
    ENDIF ()
ELSE ()
    TARGET_LINK_LIBRARIES(RiceGrow libmodule_setting.so libbmps.so libdata.so libutil.so)
ENDIF ()
