LINK_DIRECTORIES(${PROJECT_BINARY_DIR})
SET(SRC_LIST ${MODULE_SRC} pond.cpp api.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
ADD_LIBRARY(POND SHARED ${SRC_LIST})
IF (WIN32)
    TARGET_LINK_LIBRARIES(POND module_setting bmps data util)
    IF (MSVC)
        SET_PROPERTY(TARGET POND PROPERTY FOLDER "modules/hydrology_longterm")
    ENDIF ()
ELSE ()
    TARGET_LINK_LIBRARIES(POND libmodule_setting.so libbmps.so libdata.so libutil.so)
ENDIF ()
